--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
     "test": "tests"
   },
   "scripts": {
-    "build": "ember build --environment=production",
+    "build": "TAILWIND_MODE=build ember build --environment=production",
     "lint": "npm-run-all --aggregate-output --continue-on-error --parallel \"lint:!(fix)\"",
     "lint:fix": "npm-run-all --aggregate-output --continue-on-error --parallel lint:*:fix",
     "lint:hbs": "ember-template-lint .",
     "lint:hbs:fix": "ember-template-lint . --fix",
     "lint:js": "eslint . --cache",
     "lint:js:fix": "eslint . --fix",
-    "start": "ember serve",
+    "start": "TAILWIND_MODE=watch ember serve",
     "test": "npm-run-all lint test:*",
     "test:ember": "ember test"
   },
@@ -28,8 +28,11 @@
     "@embroider/compat": "^0.47.0",
     "@embroider/core": "^0.47.0",
     "@embroider/webpack": "^0.47.0",
-    "@nullvoxpopuli/ember-cli-esbuild": "^4.2.2",
+    "@nullvoxpopuli/ember-cli-esbuild": "^4.2.3",
     "@nullvoxpopuli/eslint-configs": "^1.5.5",
+    "@tailwindcss/forms": "^0.3.4",
+    "@tailwindcss/jit": "^0.1.18",
+    "@tailwindcss/typography": "^0.4.1",
     "@types/ember-data": "^3.16.15",
     "@types/ember-data__adapter": "^3.16.1",
     "@types/ember-data__model": "^3.16.2",
@@ -58,6 +61,7 @@
     "@types/htmlbars-inline-precompile": "^1.0.1",
     "@types/qunit": "^2.11.2",
     "@types/rsvp": "^4.0.4",
+    "autoprefixer": "^10.3.7",
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
     "ember-auto-import": "^2.2.2",
@@ -67,6 +71,7 @@
     "ember-cli-dependency-checker": "^3.2.0",
     "ember-cli-htmlbars": "^5.7.1",
     "ember-cli-inject-live-reload": "^2.1.0",
+    "ember-cli-postcss": "^7.0.2",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-typescript": "^4.2.1",
     "ember-export-application-global": "^2.0.1",
@@ -86,9 +91,12 @@
     "eslint-plugin-qunit": "^6.2.0",
     "loader.js": "^4.7.0",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.3.9",
     "prettier": "^2.3.2",
     "qunit": "^2.16.0",
     "qunit-dom": "^1.6.0",
+    "tailwindcss": "^2.2.17",
+    "tailwindcss-tables": "^0.4.0",
     "typescript": "^4.4.4",
     "webpack": "^5.58.2"
   },
@@ -99,14 +107,15 @@
     "edition": "octane"
   },
   "dependencies": {
-    "graphql": "^15.6.1",
-    "glimmer-apollo": "^0.4.0",
     "@apollo/client": "^3.4.16",
-    "ember-cached-decorator-polyfill": "^0.1.4",
     "@glimmer/component": "^1.0.4",
     "@glimmer/tracking": "^1.0.4",
     "ember-array-map-resource": "^2.0.0",
-    "ember-resources": "^3.2.1"
+    "ember-cached-decorator-polyfill": "^0.1.4",
+    "ember-query-params-service": "^0.5.55",
+    "ember-resources": "^3.2.1",
+    "glimmer-apollo": "^0.4.0",
+    "graphql": "^15.6.1"
   },
   "volta": {
     "node": "14.18.1",
