Bugfixes, tweak discovery algorithm

--- a/package.json
+++ b/package.json
@@ -110,9 +110,13 @@
     "@apollo/client": "^3.4.16",
     "@glimmer/component": "^1.0.4",
     "@glimmer/tracking": "^1.0.4",
+    "@fortawesome/ember-fontawesome": "github:NullVoxPopuli/ember-fontawesome#support-3-20-and-3-24",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-regular-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "ember-array-map-resource": "^2.0.0",
     "ember-cached-decorator-polyfill": "^0.1.4",
-    "ember-query-params-service": "^0.5.55",
+    "ember-query-params-service": "^0.6.0",
     "ember-resources": "^3.2.1",
     "glimmer-apollo": "^0.4.0",
     "graphql": "^15.6.1"
